--- a/.github/workflows/syntax_check.yml
+++ b/.github/workflows/syntax_check.yml
@@ -19,10 +19,10 @@ jobs:
         dotnet-version: '6.0'
 
     - name: Restore dependencies
-      run: dotnet restore
+      run: dotnet restore syntax_checker/syntax_checker.csproj
 
     - name: Build the project
-      run: dotnet build --configuration Release
+      run: dotnet build syntax_checker/syntax_checker.csproj --configuration Release
 
     - name: Run syntax checker
       run: |
